--- a/id_classprac/styles/styles.css
+++ b/id_classprac/styles/styles.css
@@ -1,12 +1,67 @@
 .main-para {
-    
-    
+
+
     font-size: 1.5em;
-    line-height: 1.5em ;
+    line-height: 1.5em;
 }
 
 
 #active {
-    background-color:white;
+    background-color: white;
     color: steelblue;
+}
+
+img {
+    width: 80%;
+}
+
+p {
+    width: 100%
+}
+
+a {
+    font-size: 1.5em;
+}
+
+/*{
+    border: 2px solid blue;
+}
+*/
+h1{text-align: center;
+}
+
+nav{text-align: center;}
+
+img{display:block;
+    width:80%;
+    margin: 0 auto;
+
+}
+main p{
+    width: 80%;
+    margin: 50px auto;
+    text-align: center;
+}
+body{
+    background-color: goldenrod;
+
+}
+footer{
+    color: white;
+    text-align: center;
+}
+nav, footer{background-color: steelblue;
+    color: white;
+
+}
+
+footer p{
+    font-size: 40px;
+    margin: 20px auto;
+}
+
+a:hover{
+    background-color: white;
+    color:steelblue;
+
 }
