--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,8 +12,8 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Rock Salt;
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --heading-font: "Rock Salt";
+  --paragraph-font: "Roboto", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #003049;  /* headlines on a white background */ 
@@ -163,3 +163,4 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
