--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -22,8 +22,8 @@ nav {
 a {
     text-align: center;
     text-decoration: none;
-    
-    
+
+
 }
 
 #hero-msg h1,
@@ -264,77 +264,82 @@ main section img {
 
 
 /* css for rivers.html begins here */
-#river-head h1{
+#river-head h1 {
     text-align: center;
-    font-family:"Rock Salt", sans-serif;
+    font-family: "Rock Salt", sans-serif;
     font-size: 3em;
     color: white;
-    
+
 }
-.river-grid h2{
+
+.river-grid h2 {
     padding: 5px;
-    color:#a82727;
+    color: #a82727;
 }
-.river-grid img{
+
+.river-grid img {
     width: 400px;
     height: 200px;
     border: 10px solid #d62828;
 
 }
 
-.river-grid p{
-    
+.river-grid p {
+
     color: beige;
     font-size: 30px;
 }
 
-.river-grid{
+.river-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr ;
-    grid-gap:5px;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 5px;
 
-    
+
 
 
 }
 
-.first-river-card{
-    grid-column:1/4;
+.first-river-card {
+    grid-column: 1/4;
     grid-row: 1/2;
-    
+
 }
-.first-river-card img{
+
+.first-river-card img {
     float: right;
     margin-top: 30px;
 
 }
 
-.second-river-card{
-    grid-column:1/4;
+.second-river-card {
+    grid-column: 1/4;
     grid-row: 2/3;
     position: relative;
-    
-    
+
+
 }
-.second-river-card img{
+
+.second-river-card img {
     float: right;
     margin-top: 25px;
 
 }
 
-.third-river-card{
-    grid-column:1/4;
+.third-river-card {
+    grid-column: 1/4;
     grid-row: 3/4;
     position: relative;
 }
-.third-river-card img{
+
+.third-river-card img {
     float: left;
     position: relative;
     margin-top: 25px;
 }
 
-.contact-us a{
+.contact-us a {
     background-color: #941404;
     color: black;
     font-size: 4em;
@@ -342,16 +347,96 @@ main section img {
     margin-left: 540px;
     border-radius: 30px;
 
-    
+
 }
 
-.contact-us a:hover{
-    background-color: #003049 ;
+.contact-us a:hover {
+    background-color: #003049;
     color: white;
 }
 
+/* from here down is the css styling for the contactus.html file */
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 1em;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+}
+
+form li+li {
+    margin-top: 1em;
+}
+
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: left;
+}
+
+input,
+textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+
+    /* Match form field borders */
+    border: 1px solid #999;
+}
+
+input:focus,
+textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+}
+
+textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+
+    /* Provide space to type some text */
+    height: 5em;
+}
+
+.button {
+    /* Align buttons with the text fields */
+    padding-left: 90px;
+    /* same size as the label elements */
+}
+
+button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: .5em;
+}
 
 
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;
+}
+
+.moveDown {
+    margin-top: 3em;
+}
 
 
 
